src/css/ContentBox.css
/* ... */
#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .ViewControls
  .ViewControl {
  background: rgba(38, 38, 38, 0.95) !important;
}

#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .PlaybackControls
  .PlaybackControl.Pressed {
  transform: scale(var(--ShrinkScale));
  transition: opacity transform 0.175s cubic-bezier(0.37, 0, 0.63, 1) !important;
}

#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .PlaybackControls:hover
  .PlaybackControl:not(:hover) {
  opacity: 0.5;
}

#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .PlaybackControls
  .PlaybackControl:hover {
  opacity: 1 !important;
}

#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .PlaybackControls
  .PlaybackControl.ShuffleToggle.Enabled,
#SpicyLyricsPage.Fullscreen
  .ContentBox
  .NowBar
  .CenteredView
  .Header
  .MediaBox
  .MediaContent
  .PlaybackControls
  .PlaybackControl.LoopToggle.Enabled {
  filter: brightness(2.75);
}

/* #SpicyLyricsPage.Fullscreen .ContentBox .NowBar .CenteredView .Header .MediaBox .MediaContent .PlaybackControls .PlaybackControl.ShuffleToggle.Enabled svg,
#SpicyLyricsPage.Fullscreen .ContentBox .NowBar .CenteredView .Header .MediaBox .MediaContent .PlaybackControls .PlaybackControl.LoopToggle.Enabled svg {
    filter: drop-shadow(0 0 5px white);
} */

@keyframes pressAnimation {
  0% {
    transform: scale(calc(1 - var(--ShrinkDelta) * 1));
  }

  16% {
    transform: scale(calc(1 - var(--ShrinkDelta) * -0.32));
  }

  28% {
    transform: scale(calc(1 - var(--ShrinkDelta) * 0.13));
  }

  44% {
    transform: scale(calc(1 - var(--ShrinkDelta) * -0.05));
  }

  59% {
    transform: scale(calc(1 - var(--ShrinkDelta) * 0.02));
  }

  73% {
    transform: scale(calc(1 - var(--ShrinkDelta) * -0.01));
  }

  88% {
    transform: scale(calc(1 - var(--ShrinkDelta) * 0));
  }

  to {
    transform: scale(calc(1 - var(--ShrinkDelta) * 0));
  }
}

#SpicyLyricsPage .Timeline {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  padding: 5cqw 7cqw;
  gap: 0.6cqw;
  position: absolute;
  bottom: 0;
}

#SpicyLyricsPage .Timeline .SliderBar {
  --TraveledColor: hsla(0, 0%, 100%, 0.9);
  --RemainingColor: hsla(0, 0%, 100%, 0.38);
  --SliderProgress: 0.6;
  background: linear-gradient(
    90deg,
    var(--TraveledColor) 0,
    var(--TraveledColor) calc(100% * var(--SliderProgress)),
    var(--RemainingColor) calc(100% * var(--SliderProgress)),
    var(--RemainingColor)
  );
  border-radius: 100cqw;
  container-type: size;
  flex-grow: 1;
  position: relative;
  width: auto;
  height: 1.3cqh;
  cursor: pointer;
  margin: 0 1.5cqw;
}

#SpicyLyricsPage .Timeline .Time {
  font-size: var(--default-font-size) !important;
}

#SpicyLyricsPage .Timeline .SliderBar .Handle {
  aspect-ratio: 1;
  background: #fff;
  border-radius: 100cqw;
  display: block;
  height: 185cqh;
  left: calc(100cqw * var(--SliderProgress));
  position: absolute;
  top: 54cqh;
  transform: translate(-50%, -50%);
}

#SpicyLyricsPage .NotificationContainer {
  display: none;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  inset: 0;
  z-index: 9999;
  width: 100%;
  height: 7cqh;
  padding: 2cqh 4cqh;
}

#SpicyLyricsPage .NotificationContainer.Danger {
  background: rgba(255, 118, 118, 0.5);
}

#SpicyLyricsPage .NotificationContainer.Information {
  background: rgba(158, 158, 255, 0.5);
}

#SpicyLyricsPage .NotificationContainer.Success {
  background: rgba(148, 255, 148, 0.5);
}

#SpicyLyricsPage .NotificationContainer.Warning {
  background: rgba(255, 208, 19, 0.5);
}

#SpicyLyricsPage .NotificationContainer.Visible {
  display: flex;
}

#SpicyLyricsPage .NotificationContainer .NotificationIcon {
  aspect-ratio: 1;
  width: 4cqh;
  height: 4cqh;
  display: flex;
  align-items: center;
  justify-content: center;
}

#SpicyLyricsPage .NotificationContainer .NotificationIcon svg {
  aspect-ratio: 1;
  width: 3cqh;
  height: 3cqh;
}

#SpicyLyricsPage .NotificationContainer.Danger .NotificationIcon svg {
  fill: #ff0000;
}

#SpicyLyricsPage .NotificationContainer.Information .NotificationIcon svg {
  fill: #2a2aff;
}

#SpicyLyricsPage .NotificationContainer.Success .NotificationIcon svg {
  fill: #00ff00;
}

#SpicyLyricsPage .NotificationContainer.Warning .NotificationIcon svg {
  fill: #ffaa00;
}

#SpicyLyricsPage .NotificationContainer .NotificationText {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 1cqh;
}

#SpicyLyricsPage .NotificationContainer .NotificationText .NotificationTitle {
  font-size: calc(var(--default-font-size) * 0.8) !important;
  font-weight: 900;
  color: rgb(255, 255, 255);
  text-align: center;
}

#SpicyLyricsPage
  .NotificationContainer
  .NotificationText
  .NotificationDescription {
  font-size: calc(var(--default-font-size) * 0.4) !important;
  font-weight: 400;
  color: rgb(206, 206, 206);
  text-align: center;
}

#SpicyLyricsPage .NotificationContainer .NotificationCloseButton {
  color: rgb(255, 255, 255);
  font-size: calc(var(--default-font-size) * 0.3) !important;
  cursor: pointer;
  width: 4cqh;
  height: 4cqh;
  display: flex;
  align-items: center;
  justify-content: center;
}

#SpicyLyricsPage .NotificationContainer .NotificationCloseButton.Disabled {
  opacity: 0;
  z-index: -1;
  pointer-events: none;
  cursor: default;
}

#SpicyLyricsPage.Fullscreen .Separator {
  background: hsla(0, 0%, 92%, 0.28);
  border-radius: 100cqh;
  display: inline-block;
  height: calc(30cqh * 0.125);
  margin-left: 7.5cqh;
  margin-right: 6.5cqh;
  width: calc(30cqh * 0.25);
}
/* ... */

